# backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  flake.nix  result  rust-toolchain.toml  rustfmt.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 2g1mwk8rwh89lchy06minqid3zg86fmd-source  37k5bby76j7l7801fc1q5yq272zwkbaq-source  67nn8fjdpc5vbbag16jlzl470ygbp1z4-source  d06w1zj1hcd4zkz73gd7cr250fqli7bn-source  gjazkgf187ypbj0b7sw21f4714il16dz-source  k948lhivp5zpgswwnikm14hh6hqbjwcg-source  lg3z06kq7qm0n19jnvyyszz1wa778n9j-source  zz6s2ksmffdq789df5x9g9fbddgi4xa1-source
src/: main.rs  maven.rs  parsing.rs  structs.rs  utils.rs
src/api/v1/: artifacts.rs  middleware.rs  mod.rs  responses.rs
src/types/: gradle_module_metadata.rs  maven_metadata.rs  mod.rs
