[package]
name = "backend"
version = "1.0.0"
edition = "2021"
authors = ["Ty <ty@myriation.xyz>"]
license = "GPL-3.0-or-later"

[dependencies]
actix-web = { version = "4.9.0", features = ["http2"] }
anyhow = "1.0.89"
base16ct = { version = "0.2.0", features = ["std"] }
clap = { version = "4.5.18", features = ["derive", "env"] }
env_logger = "0.11.5"
itertools = "0.13.0"
moka = { version = "0.12.8", features = ["future"] }
quick-xml = { version = "0.36.2", features = ["serde", "serialize"] }
reqwest = { version = "0.12.7", features = ["json"] }
semver = "1.0.23"
serde = "1.0.210"
serde_json = "1.0.128"
sha2 = "0.10.8"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.2", features = ["serde"] }
